# a-flying-hat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  fly.toml  tailwind.config.js
assets/: site.webmanifest
src/: main.rs  templates.rs
templates/: base.html  click_response.html  home.html  index.html
